Fixed text+button alignment and added pictures to remaining promotional container for testing

--- a/Template/css/flexbox.css
+++ b/Template/css/flexbox.css
@@ -56,7 +56,7 @@ Used this tutorial to learn out how to create flexbox website grid
 	position: relative;
 	text-align: center;
 	color: black;
-
+  position:relative;
   
 
 }
@@ -83,17 +83,27 @@ How to center text over image
 
 }
 
-.image-card-boxes {
+.image-card-box-1 {
+  background-image: url(../img/tea1.jpg);
+  background-size:cover;
 	width: 38.8%;
 	height:20em;
 	background-color:lightgrey;
 
 }
 
-.image-text-container {
-  text-align: center;
+.image-card-box-2 {
+  background-image: url(../img/tea4.jpg);
+  background-size:cover;
+  width: 38.8%;
+  height:20em;
+  background-color:lightgrey;
 
 }
+
+
+
+
 
 /*--------------END OF HOMEPAGE*/
 
